GroceryApp/styles.css
:root {
	--header-color: #5995da;
	--header-font: #fff;
	--header-hover: #5d6063;
	--header-dropdown-background: #b2d6ff;
	--background-color: #d6e9fe;

	--body-font: #fffffc;
	--pop-of-green: #b9f5d8;
	--pop-of-blue: #08a4bd;
}

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
}

body {
	min-height: 100vh;
	display: flex;
	background-color: var(--background-color);
	flex-direction: column;
}

footer {
	margin-top: auto;
	padding-left: 4px;
}

.page {
	height: 100%;
}

/* Menu */
.menu-container {
	color: var(--header-font);
	background-color: var(--header-color);
	padding: 20px 0;
	display: flex;
	justify-content: space-between;

	width: 100%;
	padding: 50px;
}

.menu {
	margin-top: 15px;
	width: 60%;
	display: flex;
	align-items: center;
	justify-content: right;
}

.menu > li {
	display: inline;
	margin-right: 50px;
}

.menu > li:last-of-type {
	margin-right: 0;
}

.dropdown {
	position: relative;
	display: inline-flex;
}

.dropdown > span {
	z-index: 2;
	position: relative;
	cursor: pointer;
}

.nav-link:link,
.nav-link:visited {
	background-color: var(--header-color);
	color: var(--header-font);
	padding: 12px 20px;

	transition-duration: 0.4s;
	box-shadow: none;

	border: none;
	border-radius: 8px;
	cursor: pointer;
	align-self: flex-end;

	font-size: 14pt;
	text-decoration: none;
	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
}
.nav-link:hover {
	box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
		0 17px 50px 0 rgba(0, 0, 0, 0.19);
	color: var(--background-color);
}

.logo-link:link,
.logo-link:visited {
	color: var(--body-font);
	text-decoration: none;
	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
}
.logo-link:hover {
	color: var(--background-color);
}

/* Features Menu */
.features-menu {
	display: none;
}

.dropdown:hover .features-menu {
	display: flex;
	flex-direction: column;
	background: var(--header-dropdown-background);
	border-radius: 5px;
	padding-top: 60px;

	position: absolute;
	top: -25px;
	left: -30px;

	z-index: 1;
}

.features-menu li {
	list-style: none;
	border-bottom: 1px solid var(--header-font);

	padding: 0 40px 10px 20px;
	margin: 10px;
}

.features-menu li:last-of-type {
	border-bottom: none;
}

/* -------------------------------------------- */

/* Category Menu */
.category-menu {
	display: none;
	position: absolute;
	background: var(--header-dropdown-background);
	border-radius: 5px;
	padding-top: 30px;
	white-space: nowrap;
	top: -10px;
	left: -15px;
	z-index: 1;
}

.dropdown:hover .category-menu {
	display: block;
}

.category-menu li {
	list-style: none;
	border-bottom: 1px solid var(--header-font);

	padding: 0 10px 5px 10px;
	margin: 10px;
}

.category-menu li:last-of-type {
	border-bottom: none;
}

/* -------------------------------------------- */

/* Body */

.content {
	display: block;
	margin: 5%;
}

.title {
	display: block;
	margin-left: 10%;
	padding-left: 5%;
	padding-bottom: 10px;
}

/* groceryForm */
.groceryForm {
	margin: 20px 0;
	display: block;
	margin-left: auto;
	margin-right: auto;
	width: 60%;
}
.groceryForm > label {
	display: block;
}
.groceryForm > input[type="text"] {
	width: 75%;
	padding: 12px 20px;
	margin: 8px 0;
	display: inline-block;
	border: 1px solid #ccc;
	border-radius: 4px;
	box-sizing: border-box;
}
.groceryForm > input[type="submit"] {
	background-color: var(--header-color);
	color: var(--header-font);
	padding: 12px 20px;
	border: none;
	border-radius: 4px;
	cursor: pointer;
	float: right;
}

/* Table Formatting */

table {
	border-collapse: collapse;
	padding: 20px 0;
	padding-left: 10%;
	font-size: 14pt;
}
th {
	border-bottom: 1px solid black;
	padding: 10px 20px;
	font-size: 14px;
	text-align: center;
	color: var(--header-font);
	background-color: var(--header-color);
}
td {
	padding: 10px 20px;
	font-size: 14px;
	text-align: center;
}

td > input[type="checkbox"] {
	transform: scale(1.5);
}

td > input[type="number"] {
	width: 50px;
}

td > input[type="submit"] {
	background-color: var(--header-color);
	color: var(--header-font);
	padding: 6px 10px;

	border: none;
	border-radius: 4px;
	cursor: pointer;
	float: right;
}

td > input[type="submit"]:hover {
	background-color: var(--header-dropdown-background);
}

/* Grocery List and Show Store*/

.showStoreContainer,
.groceryListContainer {
	margin-top: 30px;
	margin-bottom: 30px;

	display: flex;
	justify-content: center;
	align-items: stretch;
	flex-direction: column;
}

.showStoreSubmenu {
	display: flex;
	justify-content: space-between;
	align-items: center;
	flex-direction: row;
	margin: 0 10%;
	margin-bottom: 1%;
}

.tableContainer {
	display: flex;
	justify-content: center;
	flex-direction: column;
	align-items: center;
}

#groceryList {
	padding: 20px 0;
	padding-left: 10%;
	font-size: 14pt;
}

.itemChecked {
	text-decoration: line-through;
}

/* buttons */

.strong-button {
	background-color: var(--header-color);
	color: var(--header-font);
	padding: 6px 10px;

	border: none;
	border-radius: 4px;
	cursor: pointer;

	transition-duration: 0.2s;
	box-shadow: none;

	font-size: 14pt;
	text-decoration: none;
}
.strong-button:hover {
	box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.24), 0 8px 25px 0 rgba(0, 0, 0, 0.19);
}

.small {
	font-size: 10pt;
	padding: 3px 5px;
}

.submit-button {
	background-color: var(--header-color);
	color: var(--header-font);
	padding: 12px 20px;
	margin-right: 10%;
	margin-top: 10px;

	border: none;
	border-radius: 4px;
	cursor: pointer;
	align-self: flex-end;
}

.submit-button:hover {
	background-color: var(--header-dropdown-background);
}

